# karakuri

./: CLAUDE.md  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  flake.nix
.github/workflows/: rust.yml
assets/: Info.plist
module/: default.nix
src/: commands.rs  config.rs  ecs.rs  events.rs  main.rs  manager.rs  mcp.rs  overlay.rs  platform.rs  reader.rs  snapshot.rs  tests.rs
src/ecs/: params.rs  state.rs  systems.rs  triggers.rs
src/ecs/systems/: animation.rs  mod.rs  overlay.rs
src/logic/: bar_layout.rs  drag.rs  layout.rs  mod.rs  navigation.rs  snap.rs  spring.rs  swipe.rs
src/manager/: windows.rs
src/platform/: defaults.rs  gestures.rs  input.rs  process.rs  service.rs  wallpaper.rs  workspace.rs
src/plugins/: app_lifecycle.rs  clipboard.rs  display.rs  hotkey.rs  menu_bar.rs  mod.rs  notification.rs  snapshot.rs  window.rs
src/plugins/scripting/: engine.rs  loader.rs  mod.rs
src/plugins/scripting/api/: hotkey.rs  mod.rs  utility.rs  wallpaper.rs
src/plugins/status_bar/: builtins.rs  components.rs  config.rs  mod.rs  render.rs  window.rs
