[package]
name = "ayatsuri"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Ayatsuri — programmable macOS automation framework"
homepage = "https://github.com/pleme-io/ayatsuri"
repository = "https://github.com/pleme-io/ayatsuri"
readme = "README.md"
license = "MIT"
categories = ["os::macos-apis"]
keywords = ["macos", "automation", "window", "manager", "scripting"]

[lints.clippy]
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
accessibility-sys = "0.2.0"
arc-swap = "1.8.1"
bevy = { version = "0.18.0", default-features = false, features = [
  "multi_threaded",
  "bevy_state",
] }
bitflags = "2.10.0"
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["cargo", "derive"] }
derive_more = { version = "2.1.1", features = ["deref", "deref_mut"] }
embed_plist = "1.2.2"
launchctl = "0.3.2"
libc = "0.2.180"
notify = { version = "8.2.0", features = ["macos_fsevent"] }
objc2 = { version = "0.6.3", features = ["catch-all", "exception"] }
objc2-app-kit = "0.3.2"
objc2-core-foundation = { version = "0.3.2", features = ["CFRunLoop"] }
objc2-core-graphics = "0.3.2"
objc2-foundation = { version = "0.3.2", features = ["NSNotification"] }
regex = "1.12.3"
rhai = { version = "1.23", features = ["sync"] }
scopeguard = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
stdext = "0.3.3"
figment = { version = "0.10", features = ["env", "toml", "yaml"] }
toml = "1.0.3"
rmcp = { version = "0.15", features = ["server", "transport-io"] }
schemars = "0.8"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
